--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -29,21 +29,41 @@ Many thanks to all of those that have helped generate this file, but especially 
 
 The MasterConcordanceFile.csv included in this repository consists of the following variables:
 
-* **VARIABLE_NAME** - Name of research database variable
-* **DESCRIPTION** - Definition of the variable, derived from 990 forms
-* **SCOPE** - Filers to which the variable pertains (small charities, large charities, all charities, foundations)
-* **LOCATION_CODE** - The location of a field (form, part, and line) on the 2016 paper version of forms and schedules
-* **FORM** - Form on which the field occurs - 990, 990EZ, 990PF, Schedule A - Schedule R
-* **PART** - Location of the field on the form
-* **RDB_TABLE** - Tables for organizing the data into a relational database
-* **PRODUCTION_RULE** - Rules which should be applied to the raw data after extraction to ensure it is meaningful
-* **XPATH** - XML address for the data
-* **VERSION** - The XSD schema version that the xpath belongs to
-* **REQUIRED** - Indicates whether nonprofit filers are required to complete this field
-* **NOTES** - Additional notes about variables from programmers and users
+* **variable_name** - Name of research database variable
+* **description** - Definition of the variable, derived from 990 forms
+* **scope** - Filers to which the variable pertains (small charities, large charities, all charities, foundations)
+* **location_code** - The location of a field (form, part, and line) on the 2016 paper version of forms and schedules
+* **form** - Form on which the field occurs - 990, 990EZ, 990PF, Schedule A - Schedule R
+* **part** - Location of the field on the form
+* **data_type** - Data field type (number, character, address, date, currency, etc.)  
+* **required** - Indicates whether nonprofit filers are required to complete this field  
+* **cardinality** - Is the variable-to-nonprofit relationship one-to-one or one-to-many
+* **rdb_table** - Tables for organizing the data into a relational database  
+* **xpath** - XML address for the data
+* **version** - The XSD schema version that the xpath belongs to
+* **production_rule** - Rules which should be applied to the raw data after extraction to ensure it is meaningful
+* **last_version_modified** - Most recent date the row of data was updated
 
-A more in-depth description of each is covered below.
+A more in-depth description of each variable is covered below.
 
+The current status of each of these fields is:
+
+
+FIELD  |  STATUS  |  VALIDATED?
+:------|:---------|:------------
+variable_name | Complete | YES  
+description | Complete | Yes  
+scope | Complete | NO  
+location_code | Complete | NO  
+form | Complete | YES  
+part | Complete | NO  
+data_type | In Progress | NO  
+required | In Progress | NO  
+cardinality | No Data Yet | No  
+rdb_table | No Data Yet | NO  
+xpath | Complete | YES  
+version | Complete | YES  
+production_rule | No Data Yet | NO  
 
 
 
@@ -310,7 +330,7 @@ margin: 0 0 20px 0;
 
 td {
     padding: 3px 10px 3px 10px;
-    text-align: center;
+    text-align: left;
 }
 
 table
